correct header overflow
mobile header arrangement cut off at 320px. This commit resizes header elements to fit the container at the smallest breakpoint.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,16 +18,18 @@
 }
 h1{
     font-weight: 300;
-    margin-left: 20px;
+    font-size: 1.5em;
+    margin-left: 10px;
 }
 h2{
     font-size: 24px;
     font-weight: 300;
     flex: 1;
+    margin-right: 10px;
 }
 h3{
     padding: 7px;
-    margin-left: 7px;
+    /* margin-left: 7px; */
 }
 canvas{
     padding: 10px;
@@ -93,7 +95,7 @@ body{
 }
 .bell-icon{
     fill: white;
-    width: 40px;
+    width: 25px;
     transition: transform .2s;
 }
 .bell-icon:hover{
@@ -105,12 +107,13 @@ body{
     height: 8px;
     width: 8px;
     position: relative;
-    top: -45px;
-    left: 35px;
+    top: -38px;
+    left: 25px;
 }
 .active-user {
     display: flex;
     flex-direction: row;
+    align-items: center;
     padding: 10px;
     margin: 5px;
 }
@@ -173,7 +176,9 @@ section{
     max-height: 500px;
 }
 /* ===== Social Block ===== */
-
+.arrow{
+    display: none;
+}
 .social{
     display: flex;
     flex-direction: column;
@@ -265,8 +270,8 @@ section{
     margin-bottom: 10px;
 }
 .profile-image-active{
-    height: 60px;
-    width: 60px;
+    height: 40px;
+    width: 40px;
     margin-bottom: 0;
 }
 
@@ -339,6 +344,17 @@ label strong{
         grid-template-columns: 55px 1fr;
         grid-template-rows: auto;
         grid-template-areas: "header header" "navigation main";
+    }
+    h1{
+        font-size: 2em;
+        margin-left: 20px;
+    }
+    .bell-icon{
+        width: 30px;
+    }
+    .bell-dot{
+        top: -45px;
+        left: 25px;
     }
     .header{
         display: flex;
@@ -414,6 +430,17 @@ label strong{
         align-items: center;
         justify-content: space-between;
     }
+    .arrow{
+        display: block;
+        color: var(--light-purple);
+        font-size: 2em;
+        font-weight: lighter;
+    }
+    .members-container, .member-activity {
+        flex-direction: row;
+        align-items: center;
+        margin: auto;
+        justify-content: space-between;    }
     .widget-container-full{
         width: 90vw;
     }
